2002-01-22  James Henstridge  <james@daa.com.au>

	* pygobject.c: move GObject wrapper stuff here.

2002-01-22  Johan Dahlin  <jdahlin@telia.com>

	* codegen/codegen.py: Fix comments so jed can highlight correctly.

	* codegen/argtypes.py: Add GdkRectangleArg and GdkRectanglePtrArg

	* gtk/gtkgl.override: call pyg_block_threads instead of old
	pygtk_block_threads.

	* gtk/gtk.override: Don't ignore gtk_paint*

	* gtk/gtk.defs: Remove Container.border_width
	(GtkIconSet.icon_set_new_from_pixbuf): Make constructor of
	GtkIconSet instead of gtk_icon_Set_new
	(GtkStyle.draw_oval) (GtkStyle.draw_cross) (GtkStyle.draw_ramp) Remove.
 	(GtkStyle.draw_type): Add state_type parameter
	
	* gtk/gtk-types.defs (Widget): Add allocation field
	(Container): add fields.

	* gtk/gdk-types.defs: Remove GdkRectangle

2002-01-22  James Henstridge  <james@daa.com.au>

	* pygtype.c: move closure stuff here.

	* gobjectmodule.c (initgobject): don't create boxed_marshal hash
	table, and remove the type functions moved to pygtype.c.

	* pygtype.c: move GType stuff here from gobjectmodule.c.
	(pyg_register_boxed_custom): store the custom boxed marshal
	functions as GType data, rather than in a separate hash table.

2002-01-21  James Henstridge  <james@daa.com.au>

	* Makefile.am (gobjectmodule_la_SOURCES): list extra source files.

	* pygobject-private.h (pyg_boxed_new): new header for functions
	shared between files in gobjectmodule.

	* pygboxed.c (pyg_register_boxed): move GBoxed handling code here.

2002-01-21  Matt Wilson  <msw@redhat.com>

	* gtk/gtk.override (_wrap_gtk_radio_button_get_group): implemented
	GtkRadioButton.get_group

2002-01-16  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override (_wrap_gtk_toolbar_append_element): remove '!'
	signs that shouldn't have been there.
	(_wrap_gtk_toolbar_prepend_element): same here.
	(_wrap_gtk_toolbar_insert_element): and again.

2002-01-14  James Henstridge  <james@daa.com.au>
