@@ -1,3 +1,14 @@
+2002-01-23  James Henstridge  <james@daa.com.au>
+
+	* gobjectmodule.c (initgobject): add __doc__ descriptor to GObject
+	and GInterface.
+
+	* pygtype.c (object_doc_descr_get): skeleton of the __doc__
+	descriptor.
+	(PyGObjectDoc_Type): type definition.
+	(pyg_object_descr_doc_get): function to create and return the
+	__doc__ descriptor (we only need one for all classes).
+
 2002-01-22  James Henstridge  <james@daa.com.au>
 
 	* pygobject.c: move GObject wrapper stuff here.
